Auth wrapper screen done.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,10 @@
 {
-  "cSpell.words": ["fpdart", "googledrive", "onedrive", "screenutil"]
+  "cSpell.words": [
+    "fpdart",
+    "googledrive",
+    "Matric",
+    "onedrive",
+    "screenutil",
+    "UMIS"
+  ]
 }
