--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,32 +34,25 @@ dependencies:
   flutter_screenutil: ^5.5.4
   google_fonts: ^3.0.1
   intl: ^0.17.0
-  file_picker: ^5.2.2
   flutter_riverpod: ^2.1.1
   shared_preferences: ^2.0.15
-  hive: ^2.2.3
-  hive_flutter: ^1.1.0
   multiple_result: ^4.0.0
-  flutter_secure_storage: ^7.0.1
   phosphor_flutter: ^1.4.0
   lottie: ^2.1.0
   flutter_animate: ^2.1.0
-  intl_phone_field: ^3.1.0
   cached_network_image: ^3.2.3
   shimmer: ^2.0.0
   pull_to_refresh: ^2.0.0
-  url_launcher: ^6.1.9
   fpdart: ^0.3.0
   introduction_screen: ^2.1.0
   connectivity_plus: ^3.0.3
+  image_picker: ^0.8.7
 
 #! DEV DEPENDENCIES
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
-  build_runner: ^2.3.2
-  hive_generator: ^2.0.0
   flutter_launcher_icons: ^0.12.0
   flutter_native_splash: ^2.2.19
   change_app_package_name: ^1.1.0
