--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,10 @@ dependencies:
   introduction_screen: ^2.1.0
   connectivity_plus: ^3.0.3
   image_picker: ^0.8.7
+  firebase_core: ^2.8.0
+  firebase_auth: ^4.3.0
+  cloud_firestore: ^4.4.5
+  firebase_storage: ^11.0.16
 
 #! DEV DEPENDENCIES
 dev_dependencies:
