Lottie animation support implemented for Loading, Empty, No Data and Error situations. Users can now add device and see it in real time; device image implementation ongoing. Deleted devices data base ongoing. Device controllers and all necessary providers abstracted and implemented. Type Definition support implemented. App Utils updated.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -85,3 +85,7 @@ flutter:
     - lib/assets/images/
     - lib/assets/
     - lib/assets/icons/
+    - lib/assets/animations/empty.json
+    - lib/assets/animations/loading.json
+    - lib/assets/animations/data_not_found.json
+    - lib/assets/animations/small_error.json
