--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   firebase_auth: ^4.3.0
   cloud_firestore: ^4.4.5
   firebase_storage: ^11.0.16
+  carousel_slider: ^4.2.1
 
 #! DEV DEPENDENCIES
 dev_dependencies:
